Rating property added to the model

--- a/MvcMovie/MvcMovie.csproj
+++ b/MvcMovie/MvcMovie.csproj
@@ -209,6 +209,10 @@
     <Compile Include="Migrations\201802221313180_Initial.Designer.cs">
       <DependentUpon>201802221313180_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802221556373_Rating.cs" />
+    <Compile Include="Migrations\201802221556373_Rating.Designer.cs">
+      <DependentUpon>201802221556373_Rating.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -299,6 +303,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201802221313180_Initial.resx">
       <DependentUpon>201802221313180_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802221556373_Rating.resx">
+      <DependentUpon>201802221556373_Rating.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
