--- a/MvcMovie/MvcMovie.csproj
+++ b/MvcMovie/MvcMovie.csproj
@@ -213,6 +213,10 @@
     <Compile Include="Migrations\201802221556373_Rating.Designer.cs">
       <DependentUpon>201802221556373_Rating.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802261115523_DataAnnotations.cs" />
+    <Compile Include="Migrations\201802261115523_DataAnnotations.Designer.cs">
+      <DependentUpon>201802261115523_DataAnnotations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -306,6 +310,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201802221556373_Rating.resx">
       <DependentUpon>201802221556373_Rating.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802261115523_DataAnnotations.resx">
+      <DependentUpon>201802261115523_DataAnnotations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
